--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "library_management"
 authors = [
     { name = "Anton", email = "library@example.com"}
 ]
-description = "library management"
+description = "library"
 requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
